--- a/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
@@ -1,1 +1,53 @@
-<p>tesis-maps works!</p>
+<div class="row">
+  <div class="col-xl-12">
+      <div class="card card-height-100">
+          <div class="card-header align-items-center d-flex">
+              <h6 class="card-title mb-0 flex-grow-1">Mapa de calor de personas en riesgo de consumo de sustancias psicoactivas</h6>
+              <div>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('todos')">
+                      TODOS
+                  </button>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_muy_bajo')">
+                      MUY BAJO
+                  </button>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_bajo')">
+                      BAJO
+                  </button>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_medio')">
+                      MEDIO
+                  </button>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_alto')">
+                      ALTO
+                  </button>
+                  <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_muy_alto')">
+                      MUY ALTO
+                  </button>
+              </div>
+          </div>
+          <div class="card-body" style="margin-left: auto; margin-right: auto;">
+              <google-chart [type]="type" [data]="data" [columns]="columns" [options]="options" [width]="width" [height]="height"></google-chart>
+          </div>
+      </div>
+  </div><!--end col-->
+</div><!--end row-->
+
+<div class="row">
+  <div class="col-xl-12">
+      <div class="card card-height-100">
+          <div class="card-header d-flex align-items-center">
+              <h5 class="card-title mb-0 flex-grow-1">Conteo de personas segun el nivel de reisgo por consumo de SPI</h5>
+          </div>
+          <!--end card-header-->
+          <div class="card-body">
+              <div class="row">
+                  <div class="col-lg-6">
+                      <div>
+                          <div echarts [options]="mainChart" id="main" style="height: 300px; width: 600px; margin-left: 15px;"></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- /col-->
+</div>
