Cambios en el formulario

--- a/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
+++ b/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
@@ -1,1 +1,177 @@
-<p>tesis-form works!</p>
+<app-breadcrumbs title="Formulario para prediccion" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+
+<div class="row">
+  <div class="col-lg-12">
+      <div class="card">
+          <div class="card-header">
+              <h4 class="card-title mb-0">Data inicial</h4>
+          </div><!-- end card header -->
+
+          <div class="card-body">
+
+              <form action="javascript:void(0);">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6">
+
+                      <div>
+                        <label class="form-label">Simple select example</label>
+                        <select class="form-select mb-3" aria-label="Default select example">
+                          <option selected>Select your Status </option>
+                          <option value="1">Declined Payment</option>
+                          <option value="2">Delivery Error</option>
+                          <option value="3">Wrong Amount</option>
+                        </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <h4 class="card-title mb-0">Data por consumo</h4>
+
+                    <div class="col-lg-6 mt-3">
+                      <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6 mt-3">
+
+                      <div>
+                        <label class="form-label">Simple select example</label>
+                        <select class="form-select mb-3" aria-label="Default select example">
+                          <option selected>Select your Status </option>
+                          <option value="1">Declined Payment</option>
+                          <option value="2">Delivery Error</option>
+                          <option value="3">Wrong Amount</option>
+                        </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="mt-3">
+                        <div>
+                          <label class="form-label">Simple select example</label>
+                          <select class="form-select mb-3" aria-label="Default select example">
+                            <option selected>Select your Status </option>
+                            <option value="1">Declined Payment</option>
+                            <option value="2">Delivery Error</option>
+                            <option value="3">Wrong Amount</option>
+                          </select>
+                        </div>
+                      </div>
+
+                    </div>
+
+                      <div class="col-lg-12">
+                          <div class="text-end">
+                              <button type="submit" class="btn btn-primary">Submit</button>
+                          </div>
+                      </div>
+                      <!--end col-->
+                  </div>
+                  <!--end row-->
+              </form>
+          </div>
+      </div>
+  </div> <!-- end col -->
+</div>
+<!--end row-->
