--- a/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
@@ -110,25 +110,24 @@
     <div class="col-xl-6">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-0">Riesgo vs edad</h4>
+                <h4 class="card-title mb-0">Bar with Negative Values</h4>
             </div><!-- end card header -->
 
             <div class="card-body">
-                <apx-chart [series]="patternedChart.series" [chart]="patternedChart.chart"
-                    [dataLabels]="patternedChart.dataLabels" [plotOptions]="patternedChart.plotOptions"
-                    [yaxis]="patternedChart.yaxis" [legend]="patternedChart.legend" [xaxis]="patternedChart.xaxis"
-                    [stroke]="patternedChart.stroke" [tooltip]="patternedChart.tooltip" [fill]="patternedChart.fill"
-                    [states]="patternedChart.states" [title]="patternedChart.title" [colors]="patternedChart.colors"
-                    dir="ltr"></apx-chart>
+                <apx-chart [series]="barWithNegativeChart.series" [chart]="barWithNegativeChart.chart"
+                    [dataLabels]="barWithNegativeChart.dataLabels" [stroke]="barWithNegativeChart.stroke"
+                    [colors]="barWithNegativeChart.colors" [title]="barWithNegativeChart.title"
+                    [grid]="barWithNegativeChart.grid" [tooltip]="barWithNegativeChart.tooltip"
+                    [plotOptions]="barWithNegativeChart.plotOptions" [yaxis]="barWithNegativeChart.yaxis"
+                    [xaxis]="barWithNegativeChart.xaxis" dir="ltr"></apx-chart>
             </div><!-- end card-body -->
-        </div>
-        <!-- end col -->
+        </div><!-- end card -->
     </div>
     <!-- end col -->
     <div class="col-xl-6">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-0">Riesgo vs departamento </h4>
+                <h4 class="card-title mb-0">Riesgo vs edad</h4>
             </div><!-- end card header -->
 
             <div class="card-body">
