--- a/Admin/src/app/pages/charts/bar/bar.component.html
+++ b/Admin/src/app/pages/charts/bar/bar.component.html
@@ -20,7 +20,7 @@
     <div class="col-xl-6">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-0">Custom DataLabels Bar</h4>
+                <h4 class="card-title mb-0">Custom DataLabelss Bar</h4>
             </div><!-- end card header -->
 
             <div class="card-body">
