--- a/Admin/src/app/layouts/topbar/topbar.component.html
+++ b/Admin/src/app/layouts/topbar/topbar.component.html
@@ -182,7 +182,7 @@
                     </div>
                 </div> -->
 
-                <!-- <div dropdown class="dropdown ms-1 topbar-head-dropdown header-item">
+                <div dropdown class="dropdown ms-1 topbar-head-dropdown header-item">
                     <button dropdownToggle type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle">
                         <img *ngIf="flagvalue != undefined" id="header-lang-img" src="{{flagvalue}}" alt="Header Language" height="20" class="rounded">
                         <img *ngIf="flagvalue == undefined" id="header-lang-img" src="{{valueset}}" alt="Header Language" height="20" class="rounded">
@@ -195,7 +195,7 @@
                             <span class="align-middle">{{item.text}}</span>
                         </a>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- <div dropdown [insideClick]="true" class="dropdown topbar-head-dropdown ms-1 header-item">
                     <button dropdownToggle type="button" class="btn btn-icon btn-topbar btn-ghost-dark rounded-circle" id="page-header-cart-dropdown">
