--- a/Admin/src/app/layouts/horizontal/horizontal.component.html
+++ b/Admin/src/app/layouts/horizontal/horizontal.component.html
@@ -17,4 +17,4 @@
 </div>
 <!-- Right Side Bar -->
 <app-rightsidebar (settingsButtonClicked)="onSettingsButtonClicked()"></app-rightsidebar>
-<ngx-spinner type="ball-clip-rotate"></ngx-spinner>
+<!-- <ngx-spinner type="ball-clip-rotate"></ngx-spinner> -->
