--- a/Admin/src/app/layouts/rightsidebar/rightsidebar.component.html
+++ b/Admin/src/app/layouts/rightsidebar/rightsidebar.component.html
@@ -714,5 +714,5 @@
     </div>
 </div>
 <!-- </div>s -->
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<!-- <ngx-spinner type="ball-scale-multiple"></ngx-spinner> -->
 <div class="offcanvas-backdrop fade backdrop2 hidden" id="backdrop" (click)="closeoffcanvas()"></div>
