--- a/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
+++ b/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
@@ -1,8 +1,8 @@
 <!-- <app-breadcrumbs title="Formulario para prediccion"></app-breadcrumbs> -->
 
-<div class="row">
+<div class="row" style="display: flex;justify-content: center;align-items: center;">
 
-  <div class="col-lg-12">
+  <div class="col-lg-10">
     <div class="card">
         <div class="card-header">
 
@@ -686,8 +686,8 @@
                                     <div class="mb-4">
                                         <lord-icon src="https://cdn.lordicon.com/lupuorrc.json" trigger="loop" colors="primary:#0ab39c,secondary:#405189" style="width:120px;height:120px"></lord-icon>
                                     </div>
-                                    <h5>{{ prediccion }}</h5>
-                                    <p class="text-muted">You have Successfully Signed Up</p>
+                                    <h4>{{ prediccion }}</h4>
+                                    <p class="text-muted">{{ sig_prediccion }}</p>
                                 </div>
                             </div>
                         </cdk-step>
@@ -706,4 +706,34 @@
   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "white" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Prediciendo... </p></ngx-spinner>
 </div>
 
-<!-- <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "white" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner> -->
+<div *ngIf="mostrarCaracteristicas" style="display: flex;justify-content: center;align-items: center;">
+  <div class="col-xxl-10">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="mb-3" >Caracteristicas mas influyentes</h5>
+            <div class="row">
+                <div class="col-md-12">
+                    <tabset [vertical]="true" type="pills" class="nav flex-row nav-pills flex-nowrap d-block d-md-flex mb-2 mb-md-0 text-center gap-3">
+                        <tab *ngFor="let caracteristica of caracteristicas" [heading]="caracteristica.clave" heading="Home">
+                            <div class="tab-pane fade show">
+                              <div class="flex-shrink-0 mb-3">
+                                <!-- <div>
+                                  <google-chart [type]="peiType" [data]="[['Importancia', caracteristica.porcentaje || 0]]" [columns]="pieColumns" [options]="pieChartOptions" [width]="pieWidth" [height]="pieHeight"></google-chart>
+                                </div> -->
+                                <!-- <img src="assets/images/small/img-4.jpg" alt="" width="150" class="rounded"> -->
+                                <h5 class="mb-3" style="font-size: 50px;">{{ caracteristica.porcentaje }} %</h5>
+                              </div>
+                              <div class="flex-grow-1 ms-3">
+                                  <p class="mb-0">{{ caracteristica.significado }}</p>
+                              </div>
+
+                            </div>
+                        </tab>
+                    </tabset>
+                </div><!-- end col -->
+            </div>
+            <!--end row-->
+        </div><!-- end card-body -->
+    </div><!-- end card -->
+  </div>
+</div>
