--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -52,7 +52,7 @@
 
 <div id="informacion" class="row">
   <div class="col-lg-12">
-      <div class="card" id="contactList" style="min-height: 800px; position: relative; background-image: url('../../../../assets/images/tesis/ImageIntroduction.jpg'); background-size: cover; overflow: hidden;">
+      <div class="card" id="contactList" style="min-height: 800px; position: relative; background-image: url('../../../../assets/images/tesis/stop-drug.jpg'); background-size: cover; overflow: hidden;">
           <!-- Capa para aplicar opacidad -->
           <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.2); z-index: 1;"></div>
           <!-- Contenido dentro de la tarjeta -->
@@ -71,26 +71,7 @@
               <button style="background-color: #3498db; color: white; border: none; border-radius: 10px; padding: 15px 30px; font-size: 18px; font-weight: bold; margin-top: 20px; cursor: pointer;">Predecir</button>
               <br><br>
               <!-- Beneficios de la app -->
-            <div style="display: flex; align-items: center; justify-content: center; margin-top: 10px;">
-                <!-- Icono y texto 1 -->
-                <div style="display: flex; align-items: center;">
-                    <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                    <span style="color: white; font-size: 16px;">Información precisa</span>
-                </div>
 
-                <!-- Icono y texto 2 -->
-                <div style="display: flex; align-items: center; margin-left: 20px; margin-right: 20px;">
-                    <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                    <span style="color: white; font-size: 16px;">Rápida</span>
-                </div>
-
-                <!-- Icono y texto 3 -->
-                <div style="display: flex; align-items: center;">
-                    <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                    <span style="color: white; font-size: 16px;">Versátil</span>
-                </div>
-
-          </div>
 
       </div>
     </div>
@@ -98,23 +79,38 @@
 </div>
 
 <div class="row justify-content-center text-center" >
-  <div class="col-xl-12 col-lg-6">
+  <div class="col-xl-9 col-lg-6">
       <div class="card card-height-100">
           <div class="card-header d-flex">
-              <h5 class="card-title flex-grow-1 mb-0">Video informativo sobre la aplicación y uso de la aplicación</h5>
+              <h3 class="card-title flex-grow-1 mb-0">Video informativo sobre la aplicación y uso de la aplicación</h3>
           </div>
           <div class="card-body px-0">
             <iframe width="900" height="515" src="https://www.youtube.com/embed/-Gn5DFpEGQE?si=KVErdTNWpNt6yg2V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
       </div>
   </div><!--end col-->
+  <div class="col-xl-3 col-lg-6 justify-content-center">
+      <div class="card " id="contactList">
+          <div class="card-header align-items-center d-flex">
+              <h3 class="card-title mb-0 flex-grow-1">Informacion sobre el set de datos utilizado</h3>
+          </div>
+          <div class="card-body">
+            <p style="font-size: 15px;">El set de datos utilizado para la creacion del modelo predictivo se tomo a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuenta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
+            <p style="font-size: 15px;">La encuesta fue realizada con el fin de conocer la situacion de las personas a partir de diferentes preguntas que se realizaron, tanto preguntas de caracter informativo como edad, etnia, lugar de vivienda, entre otros, asi mismo preguntas acerca del consumo de alcohol y sustancias psicoactivas ilegales.</p>
+            <p style="font-size: 15px;">Si desea conocer mas informacion sobre el set de datos usado puede ingresar al siguiente link: <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description">Link de acceso al set de datos</a>.</p>
+          </div>
+      </div>
+  </div><!--end col-->
+</div><!--end row-->
+
+<div class="row justify-content-center text-center" >
   <div class="col-xl-12 col-lg-6 justify-content-center">
       <div class="card " id="contactList">
           <div class="card-header align-items-center d-flex">
               <h4 class="card-title mb-0 flex-grow-1">Varibales del modelo</h4>
           </div>
           <div class="card-body">
-              <div class="table-responsive" style="min-height: 400px;max-height: 400px;min-width: 80%; max-width: 80%; margin-left: auto; margin-right: auto;">
+              <div class="table-responsive" style="min-height: 400px;max-height: 400px;min-width: 80%; max-width: 70%; margin-left: auto; margin-right: auto;">
                   <table class="table table-striped table-hover mb-0">
                       <thead class="text-muted table-light">
                           <tr >
