Cambio en el mensaje

--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -95,7 +95,7 @@
               <h3 class="card-title mb-0 flex-grow-1">Informacion sobre el set de datos utilizado</h3>
           </div>
           <div class="card-body">
-            <p style="font-size: 15px;">El set de datos utilizado para la creacion del modelo predictivo se tomo a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuenta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
+            <p style="font-size: 15px;">El set de datos utilizado para la creacion del modelo predictivo se tomo a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuesta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
             <p style="font-size: 15px;">La encuesta fue realizada con el fin de conocer la situacion de las personas a partir de diferentes preguntas que se realizaron, tanto preguntas de caracter informativo como edad, etnia, lugar de vivienda, entre otros, asi mismo preguntas acerca del consumo de alcohol y sustancias psicoactivas ilegales.</p>
             <p style="font-size: 15px;">Si desea conocer mas informacion sobre el set de datos usado puede ingresar al siguiente link: <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description">Link de acceso al set de datos</a>.</p>
           </div>
