cambios en informacion

--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -12,14 +12,14 @@
                 <!-- Contenido del bloque azul -->
                 <div>
                     <h3 style="color: white;">¡Descubre lo que nuestra aplicación tiene para ofrecer!</h3>
-                    <p style="color: white;">Obtén una visión completa de nuestra aplicación y su impacto en la prevención del consumo de sustancias. Accede a contenido detallado, videos instructivos de la aplicación y un diccionario de datos detallado.</p>
+                    <p style="color: white;">Obtén una visión completa de nuestra aplicación y su impacto en la prevención del consumo de sustancias. Accede a contenido detallado, videos instructivos de la aplicación y el significado de las variables del modelo utilizado.</p>
                 </div>
                 <!-- Botón de "Más Información" -->
                 <button style="background-color: white; color: #3498db; border: none; border-radius: 5px; padding: 8px 16px; cursor: pointer;" (click)="masInfo()">Más Información</button>
                 </div>
                 <br><br><br><br>
                 <h2 style="color: white; text-align: center;">Un Futuro sin Riesgos: Tu Apoyo en la Prevención de las Adicciones</h2><br><br><br><br>
-                <p style="color: white; text-align: center; font-size: 16px;">Nuestra aplicación previene el consumo de sustancias psicoactivas en Colombia, con predicciones de riesgo y consejos para un estilo de vida saludable.</p><br><br><br>
+                <p style="color: white; text-align: center; font-size: 16px;">Nuestra aplicación previene el consumo de sustancias psicoactivas, con predicciones de riesgo e información de cuales fueron los factores de riesgo mas influyentes.</p><br><br><br>
                 <!-- Otro contenido aquí si es necesario -->
                 <!-- Botón "Predecir" -->
                 <button style="background-color: #3498db; color: white; border: none; border-radius: 10px; padding: 15px 30px; font-size: 18px; font-weight: bold; margin-top: 20px; cursor: pointer;" (click)="dirigirFormulario()">Predecir</button>
