--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -54,7 +54,7 @@
                 <!-- Contenido dentro de la tarjeta -->
                 <div class="card-body" style="position: relative; z-index: 3; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                     <br><br>
-                    <h2 style="color: white; text-align: center;">Información sobre la app</h2>
+                    <h2 style="color: white; text-align: center;">Información sobre la aplicación</h2>
                     <br>
                     <p style="color: white; text-align: center; font-size: 15px;">El consumo de sustancias psicoactivas en Colombia es un problema que ha crecido durante el pasar de los años, donde los jóvenes que dia a dia buscan experimentar nuevas experiencias se encuentran con este tipo de sustancias como por ejemplo, Marihuana, Cocaína y Basuco, sustancias que se han convertido en algo común en la vida, sin olvidar que esta problemática no solo se presenta para el consumo sino también para el mercado de estas(Sustancias), pues su comercio ha aumentado cada vez mas, además, es de resaltar que algunas personas que consumen este tipo de sustancias en algún momento dejan de consumirlas por sí mismos, mientras que otras personas se ven afectadas directamente y no logran dejar de consumirlas, afectando las relaciones sociales, familiares y del trabajo, lo cual también afecta la salud de persona, tanto física como mentalmente.</p>
                     <p style="color: white; text-align: center; font-size: 15px;">Por ende, el propósito de esta aplicación es proporcionar una herramienta que identifique y apoye a personas que están en riesgo, educar y concientizar al público sobre los riesgos asociados y contribuir al análisis de datos e investigación en el campo de la Inteligencia Artificial, generalmente se centra en los siguientes objetivos:</p>
@@ -77,12 +77,11 @@
   <div class="col-xl-9 col-lg-6">
       <div class="card card-height-100">
           <div class="card-header d-flex">
-              <h3 class="card-title flex-grow-1 mb-0">Video informativo sobre la aplicación y uso de la aplicación</h3>
+              <h3 class="card-title flex-grow-1 mb-0">Video instructivo de la aplicación</h3>
           </div>
           <div class="card-body px-0">
-            <img src="../../../../assets/images/tesis/Preview.png" style="width: 800px; height: 480px;" >
-            <!--<iframe width="800" height="510" src="https://www.youtube.com/embed/-Gn5DFpEGQE?si=KVErdTNWpNt6yg2V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            --></div>
+            <iframe width="800" height="510" src="https://www.youtube.com/embed/vR5mzbhv6hY?si=IiFbtaWUCbWr3lii" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
       </div>
   </div><!--end col-->
   <div class="col-xl-3 col-lg-6 justify-content-center">
